Moved to Tycho based pom for tests